# mandarin-speech-coach

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  mandarin_speech_demo.py  pyproject.toml
.github/workflows/: unit-tests.yml
apps/gradio_demo/: app.py  css.py  ui_helpers.py
src/mandarin_speech_coach/alignment/: base.py
src/mandarin_speech_coach/alignment/ctc/: aligner.py
src/mandarin_speech_coach/alignment/mfa/: aligner.py
src/mandarin_speech_coach/asr/: whisper_asr.py
src/mandarin_speech_coach/audio/: preprocessing.py
src/mandarin_speech_coach/core/: pipeline.py  types.py
src/mandarin_speech_coach/models/: registry.py
src/mandarin_speech_coach/pitch/: praat_pitch.py
src/mandarin_speech_coach/tones/: pinyin_utils.py  tone_colors.py
src/mandarin_speech_coach/visualization/: pronunciation_plot.py
tests/integration/: checks.py  conftest.py  test_pipeline_integration.py
tests/unit/alignment/ctc/: test_ctc_aligner.py
tests/unit/alignment/mfa/: test_mfa_aligner.py
tests/unit/asr/: test_whisper_asr.py
tests/unit/audio/: test_preprocessing.py
tests/unit/pitch/: test_praat_pitch.py
tests/unit/tones/: test_pinyin_utils.py
tests/unit/visualization/: test_pronunciation_plot.py
