[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mandarin-speech-coach"
version = "0.1.0"
description = "Gradio app for Mandarin pronunciation practice with Whisper, CTC alignment, and pitch visualization."
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Project contributors" }]
keywords = ["mandarin", "chinese", "pronunciation", "speech", "gradio", "whisper", "forced-alignment"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Education",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "gradio>=4.44,<6",
  "numpy>=1.24",
  "torch>=2.1",
  "torchaudio>=2.1",
  "torchcodec>=0.12",
  "transformers>=4.40",
  "praat-parselmouth>=0.4.3",
  "pypinyin>=0.50",
  "praatio>=6.0",
  "librosa>=0.10",
  "soundfile>=0.12",
  "plotly>=5.18",
]

[project.optional-dependencies]
# Required by the MFA CLI for Mandarin tokenization (install in your `aligner` conda env).
# If you see numpy/sklearn conflicts after pip install, use: pip install "spacy-pkuseg==0.0.33"
mfa = [
  "spacy-pkuseg>=0.0.33",
  "dragonmapper>=0.2.6",
  "hanziconv>=0.3.2",
]

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["mandarin_speech_coach"]
